--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.3.1.RELEASE</version>
-    <relativePath>../spring-boot-starter-parent</relativePath>
+    <relativePath></relativePath>
   </parent>
   <name>petclinic</name>
 
